Fixes minor layout issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -248,7 +248,7 @@ code, pre {
   }
   
   .content {
-    margin-left: 24rem;
+    margin-left: 22rem;
   }
 }
 
@@ -257,5 +257,9 @@ code, pre {
     img {
       width: 160px;
     }
+  }
+
+  .content {
+    margin-left: 24rem;
   }
 }
